--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,9 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
 
+    <%# favicon %>
+    <%= favicon_link_tag asset_path('checklist-icon.ico') %>
+
     <%# images %>
     <script src="https://kit.fontawesome.com/7363cc9ae5.js" crossorigin="anonymous"></script>
     <script type="text/javascript">
